--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "ant-design-vue": "4.x",
+    "mapbox-gl": "^3.1.0",
     "vue": "^3.4.0",
     "vue-router": "4"
   },
@@ -32,8 +33,8 @@
   },
   "lint-staged": {
     "*.{js,ts,vue,jsx,tsx}": [
-      "eslint .",
-      "eslint . --fix"
+      "eslint . --fix",
+      "eslint ."
     ]
   }
 }
